--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'com.h2database:h2'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     runtime 'org.postgresql:postgresql:42.2.11'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
